--- a/cascata_dark_mode.css
+++ b/cascata_dark_mode.css
@@ -123,16 +123,22 @@ body{
 	display: inline-flex;
 	width: 100%;
 }
-.check{
-	position: fixed;
-	margin-top: 1.1%;
-	margin-left: 1.5%;
-	display: none;
-}
 .aria{
 	cursor: pointer;
 	text-align: center;
 	width: 100%;
+	font-size: 120%;
+	font-weight: 600;
+	color: #fff;
+    padding: 0px;
+    margin-bottom: 1.75%;
+}
+.aria:hover{
+	color: #fff;
+}
+.aria:focus{
+	border-color: transparent;
+	box-shadow: none;
 }
 [aria-label] {
 	position: relative;
@@ -147,7 +153,6 @@ body{
 	width: 10px;
 	height: 10px;
 	text-decoration: none;
-	font-size: 90%;
 	color: transparent;
 	background-color: #17a2b8;
 	border-radius: 50px;
@@ -184,4 +189,102 @@ body{
 }
 .mensal .card{
 	height: 95vh;
+}
+.view{
+	display: block;
+}
+.select{
+	display: none;
+}
+
+
+.check {
+   position: relative;
+   width: 25px;
+   height: 25px;
+   margin-top: 2.5%;
+   left: 5%;
+   color: #363839;
+   border: 2px solid #bdc1c6;
+   border-radius: 4px;
+   -webkit-appearance: none;
+   outline: 0;
+   cursor: pointer;
+   -webkit-transition: background 175ms cubic-bezier(0.1, 0.1, 0.25, 1);
+}
+.check::before {
+   position: absolute;
+   content: 'X';
+   display: block;
+   top: -28%;
+   left: 18%;
+   border-style: solid;
+   border-color: #fff;
+   border-width: 0;
+   opacity: 0;
+}
+.check:checked {
+   color: #fff;
+   border-color: #dc3545;
+   background: #dc3545;
+}
+.check:checked::before {
+   opacity: 1;
+}
+.check:checked ~ label::before {
+   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+.laria {
+	position: relative;
+	cursor: pointer;
+	width: 84.25%;
+	text-align: center;
+	font-size: 120%;
+	font-weight: 600;
+	user-select: none;
+}
+.laria::before {
+	position: absolute;
+	content: attr(data-content);
+	color: #9c9e9f;
+	clip-path: polygon(0 0, 0 0, 0% 100%, 0 100%);
+	text-decoration: line-through;
+	text-decoration-color: #fff;
+	transition: clip-path 400ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+.laria{
+	margin-bottom: 2.25%;
+}
+.modal-content{
+	background-color: #343a40;
+}
+.modal-content .modal-header{
+	background-color: rgba(0,0,0,.03)!important;
+	border-bottom: 1px solid rgba(0,0,0,.125);
+}
+.modal-content .modal-footer{
+	background-color: rgba(0,0,0,.03)!important;
+	border-top: 1px solid rgba(0,0,0,.125);
+}
+
+.modal-body{
+	width: 100%;
+	text-align: center;
+}
+.modalADC{
+	text-align: left;
+}
+.modal-body button{
+	color: #fff;
+	font-size: 120%;
+}
+.modal-body button:focus{
+	border-color: transparent;
+	box-shadow: none;
+}
+.modal-body button i{
+	margin-right: 5px;
+}
+.close span{
+	color: #fff;
 }
